Closed Bug 262188 Opened 21 years ago Closed 21 years ago

nsSchemaLoader::ProcessFacet can't handle MinExclusive restriction due to typo

Categories

(Core Graveyard :: Web Services, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: doronr, Assigned: doronr)

References

Details

Attachments

(1 file)

Assignee: web-services → doronr
Blocks: xmlschema
nsSchemaLoader::ProcessFacet can't handle MinExclusive restrictions due to a typo, where the case statement checks twice for MaxExclusive. Patch coming right up.
Status: NEW → ASSIGNED
Attached patch trivial patch.Splinter Review
Attachment #160569 - Flags: review+
Attachment #160569 - Flags: superreview?(peterv)
Attachment #160569 - Flags: superreview?(peterv) → superreview+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: