Bug 262188 - nsSchemaLoader::ProcessFacet checks for sMaxInclusive_atom twice, it should check for sMinInclusive_atopm the 2nd time. r=timeless/sr=peterv